--- a/examples/rpl-udp/Makefile
+++ b/examples/rpl-udp/Makefile
@@ -2,4 +2,5 @@ CONTIKI_PROJECT = udp-client udp-server
 all: $(CONTIKI_PROJECT)
 
 CONTIKI=../..
+MODULES += os/services/loramac
 include $(CONTIKI)/Makefile.include
